setup api for jobs related to classification task
